--- a/index.css
+++ b/index.css
@@ -66,48 +66,51 @@ header a:hover {
 .home-container {
   background: linear-gradient(
       0deg,
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.8)
+      rgba(255, 255, 255, 0.7),
+      rgba(255, 255, 255, 0.7)
     ),
     url("./assets/images/home-hero.png") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   min-height: 350px;
   color: #161616;
-  padding: 45px 23px;
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+  padding: 60px 30px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .home-container h1 {
-  font-weight: 700;
-  font-size: 2.5rem;
-  line-height: 42px;
+  font-weight: 800;
+  font-size: 3rem;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .home-container p {
-  line-height: 24px;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin-bottom: 30px;
+  max-width: 600px;
+  text-align: center;
 }
 
 .home-container a {
-  display: inline-block;
-  text-align: center;
+  background-color: #275547;
+  color: #ffffff;
+  font-size: 1.1rem;
+  padding: 10px 20px;
+  border-radius: 25px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   text-decoration: none;
-  background-color: #ffcc8d;
-  border: none;
-  width: 100%;
-  margin-top: 27px;
-  padding-block: 0.75rem;
-  color: #161616;
-  font-weight: 700;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: transform 0.1s ease-in-out;
 }
 
 .home-container a:hover {
-  transform: translate(1px, 1px);
+  background-color: #204b2c;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
 }
 
 /*** ABOUT PAGE ***/
